--- a/assets/dev/scss/editor/panel/_element-settings.scss
+++ b/assets/dev/scss/editor/panel/_element-settings.scss
@@ -51,7 +51,13 @@
 		&.active {
 			background-image: linear-gradient(to bottom, #f3f3f3, #fff);
 			border-bottom: 3px solid $editor-accent;
-		}
+        }
+        
+        &.qazana-tab-control-lightbox {
+            a:before {
+                content: '\f2d2';
+            }
+        }
 
 		a {
 			display: block;
