--- a/includes/extensions/counter/assets/css/_frontend.scss
+++ b/includes/extensions/counter/assets/css/_frontend.scss
@@ -1,4 +1,13 @@
 //
+// Accordion
+//
+$direction: ltr;
+
+@import 'helpers/variables';
+@import "helpers/mixins";
+@import "helpers/direction";
+
+//
 // Counter
 //
 
@@ -43,3 +52,4 @@
 		}
 	}
 }
+
