--- a/includes/extensions/toggle/assets/css/_frontend.scss
+++ b/includes/extensions/toggle/assets/css/_frontend.scss
@@ -1,3 +1,8 @@
+$direction: ltr;
+
+@import 'helpers/variables';
+@import "helpers/mixins";
+@import "helpers/direction";
 //
 // Toggle
 //
@@ -5,14 +10,14 @@
 .qazana-toggle {
 	text-align: $start;
 
-	.qazana-toggle-title {
+	.qazana-tab-title {
 		font-weight: bold;
 		line-height: 1;
 		padding: 15px;
 		border-bottom: 1px solid $gray-light;
 		cursor: pointer;
 
-		.qazana-toggle-icon {
+		.qazana-tab-icon {
 			display: inline-block;
 			width: 1em;
 
@@ -27,7 +32,7 @@
 		&.active {
 			border-bottom: none;
 
-			.qazana-toggle-icon {
+			.qazana-tab-icon {
 
 				.fa {
 
@@ -39,7 +44,7 @@
 		}
 	}
 
-	.qazana-toggle-content {
+	.qazana-tab-content {
 	    padding: 0 15px 15px;
 		border-bottom: 1px solid $gray-light;
 	    display: none;
@@ -51,11 +56,11 @@
 
 	.qazana-toggle {
 
-		.qazana-toggle-title {
+		.qazana-tab-title {
 			padding: 12px;
 		}
 
-		.qazana-toggle-content {
+		.qazana-tab-content {
 			padding: 0 12px 10px;
 		}
 	}
