--- a/assets/dev/scss/editor/panel/controls/_popover-toggle.scss
+++ b/assets/dev/scss/editor/panel/controls/_popover-toggle.scss
@@ -1,7 +1,7 @@
 .qazana-control-type-popover_toggle {
 
 	.qazana-control-input-wrapper {
-		text-align: right;
+		text-align: $end;;
 	}
 
 	.qazana-control-popover-toggle-simple-toggle {
