improved element panel grid, settings loaded on all pages

--- a/assets/dev/scss/editor/panel/_categories.scss
+++ b/assets/dev/scss/editor/panel/_categories.scss
@@ -22,5 +22,10 @@
 
 .panel-elements-category-items {
 	overflow: hidden;
-	padding: 0 5px;
+    padding: 0 5px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: stretch;
 }
