--- a/assets/css/editor.css
+++ b/assets/css/editor.css
@@ -1111,12 +1111,9 @@ select {
     overflow: hidden;
     padding: 0 5px; }
   .qazana-panel .qazana-element-wrapper {
-    float: left;
     width: 50%;
     padding: 5px;
-    text-align: center;
-    -webkit-box-sizing: border-box;
-            box-sizing: border-box; }
+    text-align: center; }
   .qazana-panel .qazana-element {
     border-radius: 3px;
     border: 1px solid #dbd2ef;
@@ -1142,15 +1139,24 @@ select {
       font-size: 24px;
       line-height: 26px;
       display: inline-block; }
-    .qazana-panel .qazana-element .qazana-element-title-wrapper {
-      display: table;
-      width: 100%; }
     .qazana-panel .qazana-element .title {
       font-size: 12px;
       color: #2d2d2d;
-      display: table-cell;
-      vertical-align: middle;
-      height: 40px; }
+      display: -webkit-box;
+      display: -webkit-flex;
+      display: -ms-flexbox;
+      display: flex;
+      height: 40px;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -webkit-flex-direction: column;
+          -ms-flex-direction: column;
+              flex-direction: column;
+      padding: 0 8px;
+      -webkit-box-pack: center;
+      -webkit-justify-content: center;
+          -ms-flex-pack: center;
+              justify-content: center; }
   .qazana-panel #qazana-panel-elements-search-wrapper {
     position: relative;
     margin: 10px 10px 5px; }
@@ -1189,7 +1195,27 @@ select {
     font-size: 11px; }
   .qazana-panel .panel-elements-category-items {
     overflow: hidden;
-    padding: 0 5px; }
+    padding: 0 5px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch; }
   .qazana-panel .qazana-panel-scheme-title {
     padding: 10px 20px;
     margin-top: 10px; }
