--- a/assets/dev/scss/editor/panel/_elements.scss
+++ b/assets/dev/scss/editor/panel/_elements.scss
@@ -19,11 +19,9 @@
 }
 
 .qazana-element-wrapper {
-	float: $start;
 	width: 50%;
 	padding: 5px;
 	text-align: center;
-	box-sizing: border-box;
 }
 
 .qazana-element {
@@ -55,18 +53,15 @@
 		line-height: 26px;
 		display: inline-block;
 	}
-
-	.qazana-element-title-wrapper {
-		display: table;
-		width: 100%;
-	}
-
+	
 	.title {
-		font-size: 12px;
+        font-size: 12px;
 		color: $editor-darker;
-		display: table-cell;
-		vertical-align: middle;
-		height: 40px;
+        display: flex;
+        height: 40px;
+        flex-direction: column;
+        padding: 0 8px;
+        justify-content: center;
 	}
 }
 
