--- a/assets/css/editor-rtl.css
+++ b/assets/css/editor-rtl.css
@@ -1109,7 +1109,27 @@ select {
     cursor: pointer; }
   .qazana-panel #qazana-panel-elements {
     overflow: hidden;
-    padding: 0 5px; }
+    padding: 0 5px;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: row;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+    -webkit-box-align: stretch;
+    -webkit-align-items: stretch;
+        -ms-flex-align: stretch;
+            align-items: stretch; }
   .qazana-panel .qazana-element-wrapper {
     width: 50%;
     padding: 5px;
