--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -79,7 +79,8 @@
     height: 60px;
     line-height: 60px;
     border-radius: 50%;
-    margin-left: -30px; }
+    margin-left: -30px;
+    text-align: center; }
 .dialog-options-widget .dialog-buttons-wrapper > button,
 .dialog-confirm-widget .dialog-buttons-wrapper > button {
   width: 50%; }
