--- a/assets/dev/scss/editor/_dialog.scss
+++ b/assets/dev/scss/editor/_dialog.scss
@@ -107,6 +107,7 @@
             line-height: 60px;
             border-radius: 50%;
             margin-left: -30px;
+            text-align: center;
         }
 	}
 
