--- a/assets/dev/scss/frontend/widgets/slick/_posts-slider-small.scss
+++ b/assets/dev/scss/frontend/widgets/slick/_posts-slider-small.scss
@@ -67,7 +67,7 @@
 
     .slick-slide.is-selected {
         &:before {
-            font-family: 'icomoon' !important;
+            font-family: 'eicons';
             speak: none;
             font-style: normal;
             font-weight: normal;
