--- a/assets/dev/scss/editor/panel/_global.scss
+++ b/assets/dev/scss/editor/panel/_global.scss
@@ -249,7 +249,7 @@
 		border-bottom-color: #fff;
 	}
 
-	div.elementor-control { // Harder selector to override default settings
+	div.qazana-control { // Harder selector to override default settings
 		background-color: transparent; // Makes the popover's border-radius visible
 
 		&:before {
